--- a/WebSpectre.Server/appsettings.json
+++ b/WebSpectre.Server/appsettings.json
@@ -1,19 +1,20 @@
 {
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "RedisConnection": "localhost",
+    "ElasticConnection": "https://localhost:9200"
+  },
+  "ElasticSearchAuth": {
+    "Username": "elastic",
+    "Password": "TZ4kEzIDXSovq7QWNK4r"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "RedisConnection": "localhost",
-    "ElasticConnection": "https://localhost:9200"
-  },
-  "RedisPort":  6379,
-  "ElasticSearchAuth": {
-    "Username": "elastic",
-    "Password": "TZ4kEzIDXSovq7QWNK4r"
-  },
+  "PacketTransitTimeCapacity": 20,
+  "RedisPort": 6379,
   "StreamReadDelay": 10 // Указывается в секундах
 }
