--- a/WebSpectre.Server/appsettings.json
+++ b/WebSpectre.Server/appsettings.json
@@ -2,7 +2,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "RedisConnection": "localhost",
-    "ElasticConnection": "https://localhost:9200"
+    "ElasticConnection": "https://localhost:9200",
+    "SqliteConnection": "C:\\Users\\Admin\\Documents\\admin.db"
   },
   "ElasticSearchAuth": {
     "Username": "elastic",
