--- a/WebSpectre.Server/WebSpectre.Server.csproj
+++ b/WebSpectre.Server/WebSpectre.Server.csproj
@@ -14,6 +14,8 @@
     <PackageReference Include="PacketDotNet" Version="1.4.7" />
     <PackageReference Include="StackExchange.Redis" Version="2.7.17" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.2" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="8.0.2" />
   </ItemGroup>
 
   <ItemGroup>
