--- a/WebSpectre.Server/appsettings.json
+++ b/WebSpectre.Server/appsettings.json
@@ -15,6 +15,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "LogFile": "C:\\Users\\Admin\\source\\repos\\WebSpectre\\WebSpectre.Server\\Logs\\",
   "PacketTransitTimeCapacity": 20,
   "RedisPort": 6379,
   "StreamReadDelay": 10 // Указывается в секундах
