first data on client about agents

--- a/WebSpectre.Server/appsettings.json
+++ b/WebSpectre.Server/appsettings.json
@@ -3,7 +3,7 @@
   "ConnectionStrings": {
     "RedisConnection": "localhost",
     "ElasticConnection": "https://localhost:9200",
-    "DbConnection": "Server=localhost;Port=5432;Database=webspectre;User ID=postgres;Password=000"
+    "DbConnection": "Host=localhost;Port=5432;Database=webspectre;User Id=postgres;Password=000;"
   },
   "ElasticSearchAuth": {
     "Username": "elastic",
